# Quantization_for_Advenced_Vision_Model

./: CMakeLists.txt  README.md  build.sh  toolchain-aarch64.cmake
arm64_build/: toolchain-aarch64.cmake
src/InferMNN/: exportONNX2MNN.sh  mnnInfer.cpp  mnnInfer.h
src/InferMNN/osnet/: export_osnet_to_onnx.py  pth2onnx.sh
test/: hello_rdk.cpp  test_mnn.cpp
